# ytmusicapi-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  curl2headers.py  pyproject.toml
.cargo/: config.toml
examples/: login_and_playlists.rs
src/: browse.rs  error.rs  explore.rs  lib.rs  library.rs  playlists.rs  podcasts.rs  search.rs  uploads.rs
